📚 Auto-update: News data refreshed - 2026-01-07 17:17 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -44758,5 +44758,157 @@
         "published": "Wed, 07 Jan 2026 21:32:26 +0530",
         "source": "Tech-Economic Times",
         "summary": "Britain's \u200ddata regulator, \u200bthe Information Commissioner's Office, said \u2060on Wednesday it had asked Elon Musk's X to clarify \u200chow \u200cit was complying with data protection \u200claws in light of concerns about the use of X's built-in AI bot Grok \u200bto produce \u200bimages."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/07/caterpillar-taps-nvidia-to-bring-ai-to-its-construction-equipment/",
+        "title": "Caterpillar taps Nvidia to bring AI to its\u00a0construction equipment",
+        "link": "https://techcrunch.com/2026/01/07/caterpillar-taps-nvidia-to-bring-ai-to-its-construction-equipment/",
+        "published": "Wed, 07 Jan 2026 17:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Caterpillar is piloting Cat AI, a system of AI agents in one of its excavators built on Nvidia's physical AI platform."
+    },
+    {
+        "id": "https://www.theverge.com/tech/857164/ces-2026-hands-on-loreal",
+        "title": "L\u2019Or\u00e9al\u2019s new LED face masks address all my issues with this category",
+        "link": "https://www.theverge.com/tech/857164/ces-2026-hands-on-loreal",
+        "published": "2026-01-07T12:01:57-05:00",
+        "source": "The Verge",
+        "summary": "I hate when friends and family ask me which LED face mask to buy. That's because LED face masks are another prime example of the wild wellness west. There's compelling science behind using red and infrared light therapy to address skin concerns, particularly wrinkles. However, wellness influencers have taken that concept and absolutely ran away [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/857603/sony-ps5-covers-controller-hyperpop-color-accessories",
+        "title": "Sony&#8217;s new &#8216;Hyperpop&#8217; PS5 covers are bursting with RGB color",
+        "link": "https://www.theverge.com/tech/857603/sony-ps5-covers-controller-hyperpop-color-accessories",
+        "published": "2026-01-07T11:40:01-05:00",
+        "source": "The Verge",
+        "summary": "Sony's first PlayStation announcement of 2026 is all about color. The new Hyperpop Collection includes colorful neon console covers and controllers that really add a pop of color to a PS5. Sadly, if you own a PS5 Pro then you won't be able to enjoy the RGB in your living room fun. There are three [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/855028/ces-2026-best-chargers-wireless-power-bank-qi",
+        "title": "The best chargers and portable power solutions at CES 2026",
+        "link": "https://www.theverge.com/tech/855028/ces-2026-best-chargers-wireless-power-bank-qi",
+        "published": "2026-01-07T11:37:21-05:00",
+        "source": "The Verge",
+        "summary": "The show may be best known for the debut of high-end, budget-busting TVs - of which there was no shortage this year - but in recent years many companies have used CES to announce their latest charging innovations. Unlike CES 2025 where several companies embraced built-in charging cables, there's no unifying theme to the hardware [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/rfk-jr-dead-bear-cub-central-park-photo/",
+        "title": "New Records Reveal the Mess RFK Jr. Left When He Dumped a Dead Bear in Central Park",
+        "link": "https://www.wired.com/story/rfk-jr-dead-bear-cub-central-park-photo/",
+        "published": "Wed, 07 Jan 2026 16:24:31 +0000",
+        "source": "WIRED",
+        "summary": "Robert F. Kennedy Jr. says he left a bear cub\u2019s corpse in Central Park in 2014 to \u201cbe fun.\u201d Records newly obtained by WIRED show what he left New York civil servants to clean up."
+    },
+    {
+        "id": "https://www.wired.com/story/cold-nose-washing-nasal-saline-rinse/",
+        "title": "The Ancient Art of Nasal Rinsing Might Protect You From a Cold",
+        "link": "https://www.wired.com/story/cold-nose-washing-nasal-saline-rinse/",
+        "published": "Wed, 07 Jan 2026 16:18:46 +0000",
+        "source": "WIRED",
+        "summary": "New research has given credence to a 5,000-year-old practice."
+    },
+    {
+        "id": "https://arstechnica.com/cars/2026/01/evs-remain-a-niche-choice-in-the-us-according-to-survey/",
+        "title": "EVs remain a niche choice in the US, according to survey",
+        "link": "https://arstechnica.com/cars/2026/01/evs-remain-a-niche-choice-in-the-us-according-to-survey/",
+        "published": "Wed, 07 Jan 2026 16:30:56 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Consumers around the world told Deloitte what they want in their next vehicle."
+    },
+    {
+        "id": "https://arstechnica.com/science/2026/01/new-battery-idea-gets-lots-of-power-out-of-unusual-sulfur-chemistry/",
+        "title": "New battery idea gets lots of power out of unusual sulfur chemistry",
+        "link": "https://arstechnica.com/science/2026/01/new-battery-idea-gets-lots-of-power-out-of-unusual-sulfur-chemistry/",
+        "published": "Wed, 07 Jan 2026 16:02:21 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Rather than being used as a storage material, the sulfur gives up electrons."
+    },
+    {
+        "id": "https://arstechnica.com/science/2026/01/weve-got-a-fossil-closer-to-our-split-with-neanderthals-and-denisovans/",
+        "title": "We have a fossil closer to our split with Neanderthals and Denisovans",
+        "link": "https://arstechnica.com/science/2026/01/weve-got-a-fossil-closer-to-our-split-with-neanderthals-and-denisovans/",
+        "published": "Wed, 07 Jan 2026 16:00:23 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "A recent study suggests that North Africa may be a key place to look."
+    },
+    {
+        "id": "https://arstechnica.com/ai/2026/01/computer-scientist-yann-lecun-intelligence-really-is-about-learning/",
+        "title": "Computer scientist Yann LeCun: \u201cIntelligence really is about learning\u201d",
+        "link": "https://arstechnica.com/ai/2026/01/computer-scientist-yann-lecun-intelligence-really-is-about-learning/",
+        "published": "Wed, 07 Jan 2026 15:06:53 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "The AI pioneer talks about stepping down from Meta, limits of large language models."
+    },
+    {
+        "id": "https://arstechnica.com/culture/2026/01/review-stranger-things-frustrating-finale-didnt-quite-stick-the-landing/",
+        "title": "Review: Stranger Things\u2019 frustrating finale didn\u2019t quite stick the landing",
+        "link": "https://arstechnica.com/culture/2026/01/review-stranger-things-frustrating-finale-didnt-quite-stick-the-landing/",
+        "published": "Wed, 07 Jan 2026 14:46:54 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Sure, there were many great moments, but in the end, they didn't add up to a satisfying whole."
+    },
+    {
+        "id": "https://www.engadget.com/ai/samsung-says-ram-costs-will-likely-lead-to-price-hikes-soon-170653524.html?src=rss",
+        "title": "Samsung says RAM costs will likely lead to price hikes soon",
+        "link": "https://www.engadget.com/ai/samsung-says-ram-costs-will-likely-lead-to-price-hikes-soon-170653524.html?src=rss",
+        "published": "Wed, 07 Jan 2026 17:06:53 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Samsung says AI data center-fueled RAM scarcity could raise the company's prices. Wonjin Lee, Samsung's global marketing leader, sounded the alarm in an <a class=\"link\" href=\"https://www.bloomberg.com/news/articles/2026-01-07/samsung-warns-of-price-hikes-as-rising-memory-costs-affect-all\" target=\"_blank\">interview</a> with <em>Bloomberg</em> on Tuesday at CES 2026.  As recently as early December, Samsung <a class=\"link\" href=\"https://www.reuters.com/world/china/ai-frenzy-is-driving-new-global"
+    },
+    {
+        "id": "https://www.engadget.com/home/kitchen-tech/nosh-is-an-ai-cooking-robot-for-the-meal-prep-crowd-170000610.html?src=rss",
+        "title": "Nosh is an AI cooking robot for the meal prep crowd",
+        "link": "https://www.engadget.com/home/kitchen-tech/nosh-is-an-ai-cooking-robot-for-the-meal-prep-crowd-170000610.html?src=rss",
+        "published": "Wed, 07 Jan 2026 17:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>I\u2019m fascinated by <a class=\"link\" href=\"https://www.engadget.com/home/kitchen-tech/a-105000-robot-arm-nobody-needs-cooked-me-a-delicious-lunch-140050065.html\" target=\"_blank\">AI cooking robots</a> which, as far as I\u2019m concerned, automate the one fun bit of cooking. Sadly, it\u2019s far easier to make something that can stir a pan of ingredients as they cook compared to building something that would successfully peel a carrot. Nosh is the latest unit to use CES to announce itself to the world, gear"
+    },
+    {
+        "id": "https://www.engadget.com/17-ces-gadgets-you-can-buy-right-now-164325644.html?src=rss",
+        "title": "17 CES gadgets you can buy right now",
+        "link": "https://www.engadget.com/17-ces-gadgets-you-can-buy-right-now-164325644.html?src=rss",
+        "published": "Wed, 07 Jan 2026 16:43:25 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"link\" href=\"https://www.engadget.com/ces-2026-live-updates-on-lego-samsung-nvidia-dell-and-more-153146039.html\" target=\"_blank\">CES 2026</a> is in full swing, but you don\u2019t have to wait months to get your hands on everything announced in Las Vegas this year. A surprising number of products are already up for pre-order, if not outright available to buy today, from new chargers and docks to projectors, keyboards and smart home gear. CES is still a showcase for concepts and big promise"
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/anker-unveils-a-new-lineup-of-chargers-docks-and-accessories-at-ces-2026-160021025.html?src=rss",
+        "title": "Anker unveils a new lineup of chargers, docks and accessories at CES 2026",
+        "link": "https://www.engadget.com/computing/accessories/anker-unveils-a-new-lineup-of-chargers-docks-and-accessories-at-ces-2026-160021025.html?src=rss",
+        "published": "Wed, 07 Jan 2026 16:40:31 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Anker, one of the leaders in<a class=\"link\" href=\"https://www.engadget.com/computing/accessories/best-power-bank-143048526.html\" target=\"_blank\"> third-party chargers</a>, has unveiled a new portfolio of \"smart\" chargers and docks at<a class=\"link\" href=\"https://www.engadget.com/big-tech/ces-2026-everything-were-expecting-from-techs-biggest-conference-in-january-120000106.html\" target=\"_blank\"> CES 2026</a>. The company says the lineup adds improved visual interfaces, faster Qi2 wireless char"
+    },
+    {
+        "id": "https://thehorizonsun.com/features/2024/04/11/the-target-forensics-lab/",
+        "title": "Target has their own forensic lab to investigate shoplifters",
+        "link": "https://thehorizonsun.com/features/2024/04/11/the-target-forensics-lab/",
+        "published": "Wed, 07 Jan 2026 15:41:01 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46527645\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/this-device-could-help-make-menstrual-periods-more-comfortable/",
+        "title": "This device could help make menstrual periods more comfortable",
+        "link": "https://www.zdnet.com/article/this-device-could-help-make-menstrual-periods-more-comfortable/",
+        "published": "Wed, 07 Jan 2026 16:54:00 GMT",
+        "source": "Latest news",
+        "summary": "OhmBody uses neurostimulation to reduce some of the worst menstrual period symptoms."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/china-asks-tech-firms-to-halt-orders-for-nvidias-h200-chips-report/articleshow/126398745.cms",
+        "title": "China asks tech firms to halt orders for Nvidia's H200 chips: Report",
+        "link": "https://economictimes.indiatimes.com/tech/technology/china-asks-tech-firms-to-halt-orders-for-nvidias-h200-chips-report/articleshow/126398745.cms",
+        "published": "Wed, 07 Jan 2026 22:13:02 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Beijing has asked \u200dsome Chinese tech companies to \u200bhalt orders for Nvidia's H200 chips this week, and \u2060is expected to mandate domestic artificial intelligence chip purchases, the Information reported on Wednesday."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/coursera-cofounder-andrew-ng-warns-agi-hype-could-mislead-students-ceos/articleshow/126398410.cms",
+        "title": "Coursera cofounder Andrew Ng warns AGI hype could mislead students, CEOs",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/coursera-cofounder-andrew-ng-warns-agi-hype-could-mislead-students-ceos/articleshow/126398410.cms",
+        "published": "Wed, 07 Jan 2026 22:05:05 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Ng said the term AGI is creating the impression that AI systems are far more advanced and closer to human intelligence than they truly are. To set these confusions at rest, he has proposed a new benchmark, which he called the \u2018Turing AGI\u2019 test."
     }
 ]
