📚 Auto-update: News data refreshed - 2026-01-07 18:18 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -44910,5 +44910,125 @@
         "published": "Wed, 07 Jan 2026 22:05:05 +0530",
         "source": "Tech-Economic Times",
         "summary": "Ng said the term AGI is creating the impression that AI systems are far more advanced and closer to human intelligence than they truly are. To set these confusions at rest, he has proposed a new benchmark, which he called the \u2018Turing AGI\u2019 test."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/07/skylight-debuts-calendar-2-to-keep-your-family-organized/",
+        "title": "Skylight debuts Calendar 2 to keep your family organized",
+        "link": "https://techcrunch.com/2026/01/07/skylight-debuts-calendar-2-to-keep-your-family-organized/",
+        "published": "Wed, 07 Jan 2026 18:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Skylight, known for its digital picture frame, has a new digital product that puts software and AI at the center."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/07/google-classrooms-new-tool-uses-gemini-to-transform-lessons-into-podcast-episodes/",
+        "title": "Google Classroom\u2019s new tool uses Gemini to transform lessons into podcast episodes",
+        "link": "https://techcrunch.com/2026/01/07/google-classrooms-new-tool-uses-gemini-to-transform-lessons-into-podcast-episodes/",
+        "published": "Wed, 07 Jan 2026 17:55:35 +0000",
+        "source": "TechCrunch",
+        "summary": "Google Classroom now offers a Gemini-powered tool that generates podcast-style audio lessons for teachers to deepen engagement with students."
+    },
+    {
+        "id": "https://www.theverge.com/news/857723/dell-consumers-ai-pcs-comments",
+        "title": "Dell admits consumers don\u2019t care about AI PCs",
+        "link": "https://www.theverge.com/news/857723/dell-consumers-ai-pcs-comments",
+        "published": "2026-01-07T12:57:27-05:00",
+        "source": "The Verge",
+        "summary": "Dell has revealed that consumers aren't buying PCs for AI features right now. In an interview with PC Gamer ahead of CES, Dell has made it clear its 2026 products aren't all about being AI-first, and it's moving beyond being \"all about\" AI PCs. \"We're very focused on delivering upon the AI capabilities of a [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/856494/ces-2026-tech-you-can-already-buy",
+        "title": "CES 2026 tech you can already buy",
+        "link": "https://www.theverge.com/gadgets/856494/ces-2026-tech-you-can-already-buy",
+        "published": "2026-01-07T12:27:06-05:00",
+        "source": "The Verge",
+        "summary": "News coming out of CES 2026 might be slowing down, but as of Wednesday we still have writers on the ground, zipping around from hotel suite to Las Vegas convention center to try everything that matters. We've published well over 100 articles, and there's plenty of more content to come, including reviews of stuff we [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/gaming/2026/01/steamos-continues-its-slow-spread-across-the-pc-gaming-landscape/",
+        "title": "SteamOS continues its slow spread across the PC gaming landscape",
+        "link": "https://arstechnica.com/gaming/2026/01/steamos-continues-its-slow-spread-across-the-pc-gaming-landscape/",
+        "published": "Wed, 07 Jan 2026 17:31:30 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Legion Go 2 support announced at CES, wide support for Arm hardware coming soon."
+    },
+    {
+        "id": "https://arstechnica.com/science/2026/01/japanese-nuclear-plant-operator-fabricated-seismic-risk-data/",
+        "title": "Japanese nuclear plant operator fabricated seismic risk data",
+        "link": "https://arstechnica.com/science/2026/01/japanese-nuclear-plant-operator-fabricated-seismic-risk-data/",
+        "published": "Wed, 07 Jan 2026 17:17:02 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Company staff were very selective about how they modeled earthquake dangers."
+    },
+    {
+        "id": "https://www.engadget.com/wearables/these-robotic-sneakers-gave-me-a-surprising-boost-at-ces-174500005.html?src=rss",
+        "title": "These robotic sneakers gave me a surprising boost at CES",
+        "link": "https://www.engadget.com/wearables/these-robotic-sneakers-gave-me-a-surprising-boost-at-ces-174500005.html?src=rss",
+        "published": "Wed, 07 Jan 2026 17:45:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>I'll admit that I've always kind of taken walking for granted. Other than a knee injury more than a decade ago, my ability to walk long distances has largely been limited only by my own choices. That's not the case for everyone, though. And robotics company Dephy has created a pair of robotic sneakers, called <a class=\"link\" href=\"https://www.dephy.com/sidekick-starter-pack\" target=\"_blank\">the Sidekick</a>, that are meant to help people who want to walk more than their bodies might otherwise"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/music/spotify-now-lets-you-share-what-youre-listening-to-in-real-time-via-chat-173749120.html?src=rss",
+        "title": "Spotify now lets you share what you\u2019re listening to in real time via chat",
+        "link": "https://www.engadget.com/entertainment/music/spotify-now-lets-you-share-what-youre-listening-to-in-real-time-via-chat-173749120.html?src=rss",
+        "published": "Wed, 07 Jan 2026 17:37:49 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Spotify is <a href=\"https://newsroom.spotify.com/2026-01-07/listening-activity-request-to-jam-messages-updates/\"><ins>rolling out more social features</ins></a> to keep people on the platform. It's adding a new tool to its <a href=\"https://www.engadget.com/entertainment/music/spotify-introduces-an-in-app-messaging-feature-134401088.html\"><ins>messaging platform</ins></a> that lets users see what their friends and family members are listening to in real time.</p>\n<p>Once activated, a user's li"
+    },
+    {
+        "id": "https://www.engadget.com/home/smart-home/ikeas-first-ces-appearance-included-a-6-matter-smart-bulb-172623474.html?src=rss",
+        "title": "IKEA's first CES appearance included a $6 Matter smart bulb",
+        "link": "https://www.engadget.com/home/smart-home/ikeas-first-ces-appearance-included-a-6-matter-smart-bulb-172623474.html?src=rss",
+        "published": "Wed, 07 Jan 2026 17:26:23 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>I know IKEA is all about small, efficient spaces, but their meeting room inside the Venetian during the company\u2019s first-ever <a class=\"link\" href=\"https://www.engadget.com/ces-2026-live-updates-on-lego-samsung-nvidia-dell-and-more-153146039.html\" target=\"_blank\">CES</a> was the same size as my (not large) living room. Plenty of people were as excited as I was to see what the Swedish designers brought with them to the show and the room was thick with humans. A bowl full of <a class=\"link rapid"
+    },
+    {
+        "id": "https://www.nprillinois.org/illinois/2026-01-06/health-care-data-breach-affects-600-000-patients-illinois-agency-says",
+        "title": "Health care data breach affects over 600k patients, Illinois agency says",
+        "link": "https://www.nprillinois.org/illinois/2026-01-06/health-care-data-breach-affects-600-000-patients-illinois-agency-says",
+        "published": "Wed, 07 Jan 2026 16:28:14 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46528353\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/rolling-square-android-tracker-tags-review/",
+        "title": "Why I keep this Bluetooth tracker tag on my keychain instead of an AirTag - and don't regret it",
+        "link": "https://www.zdnet.com/article/rolling-square-android-tracker-tags-review/",
+        "published": "Wed, 07 Jan 2026 17:46:00 GMT",
+        "source": "Latest news",
+        "summary": "The Rolling Square AirNotch Pro Dual finder tags are water- and dust-resistant, last up to 20 months, and attach securely to almost anything."
+    },
+    {
+        "id": "https://www.zdnet.com/article/topdon-js3000-12v-car-battery-jump-starter-review/",
+        "title": "This portable jump starter resurrected my car in the middle of a snowstorm - now it's a must for me",
+        "link": "https://www.zdnet.com/article/topdon-js3000-12v-car-battery-jump-starter-review/",
+        "published": "Wed, 07 Jan 2026 17:45:00 GMT",
+        "source": "Latest news",
+        "summary": "I tried the Topdon JS3000 out of the box, but the real test came six months later when I had to dig it out again."
+    },
+    {
+        "id": "https://www.zdnet.com/article/jackery-solar-gazebo-robot-ces/",
+        "title": "Jackery's roaming robot at CES is every power users' dream outdoor gadget",
+        "link": "https://www.zdnet.com/article/jackery-solar-gazebo-robot-ces/",
+        "published": "Wed, 07 Jan 2026 17:42:00 GMT",
+        "source": "Latest news",
+        "summary": "Jackery is going beyond power stations with a new off-grid solar gazebo and even a roaming robot - yes, really."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/why-grok-not-chatgpt-or-gemini-became-epicentre-of-obscenity-backlash/articleshow/126398981.cms",
+        "title": "Why Grok, not ChatGPT or Gemini, became epicentre of obscenity backlash",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/why-grok-not-chatgpt-or-gemini-became-epicentre-of-obscenity-backlash/articleshow/126398981.cms",
+        "published": "Wed, 07 Jan 2026 22:35:34 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Grok\u2019s Spicy mode has come under fire for generating non-consensual, sexually explicit images. Its deep integration with microblogging platform X has worked to its disadvantage, as Grok can be invoked directly in X posts, replies, and chats, pushing lewd images into the public feed by default."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/open-ai-vs-google-chatgpts-daily-visits-fall-22-gemini-holds-steady/articleshow/126398825.cms",
+        "title": "OpenAI vs Google: ChatGPT's daily visits fall 22%, Gemini holds steady",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/open-ai-vs-google-chatgpts-daily-visits-fall-22-gemini-holds-steady/articleshow/126398825.cms",
+        "published": "Wed, 07 Jan 2026 22:20:04 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "ChatGPT\u2019s average daily visits fell 22% over the past six weeks, with its seven-day average dropping from around 203 million to about 158 million. The decline has come even as Gemini\u2019s usage has remained largely flat, helping narrow the gap between the two consumer AI platforms, which together serve hundreds of millions of users globally."
     }
 ]
