📚 Auto-update: News data refreshed - 2026-01-07 19:13 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -45030,5 +45030,125 @@
         "published": "Wed, 07 Jan 2026 22:20:04 +0530",
         "source": "Tech-Economic Times",
         "summary": "ChatGPT\u2019s average daily visits fell 22% over the past six weeks, with its seven-day average dropping from around 203 million to about 158 million. The decline has come even as Gemini\u2019s usage has remained largely flat, helping narrow the gap between the two consumer AI platforms, which together serve hundreds of millions of users globally."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/07/shopify-competitor-swap-raises-100m-six-months-after-raising-40m/",
+        "title": "Shopify competitor Swap raises $100M six months after raising $40M",
+        "link": "https://techcrunch.com/2026/01/07/shopify-competitor-swap-raises-100m-six-months-after-raising-40m/",
+        "published": "Wed, 07 Jan 2026 19:10:33 +0000",
+        "source": "TechCrunch",
+        "summary": "VC firms DST Global and Iconiq are piling into e-commerce startup Swap Commerce, which is going up against Shopify."
+    },
+    {
+        "id": "https://techcrunch.com/video/where-vcs-think-ai-startups-can-win-even-with-openai-in-the-game/",
+        "title": "Where VCs think AI startups can win, even with OpenAI in the game",
+        "link": "https://techcrunch.com/video/where-vcs-think-ai-startups-can-win-even-with-openai-in-the-game/",
+        "published": "Wed, 07 Jan 2026 18:53:35 +0000",
+        "source": "TechCrunch",
+        "summary": "Vanessa Larco,&#160;partner at&#160;Premise&#160;and former partner at NEA, thinks 2026 will finally be the year of consumer AI.&#160; Larco, who&#8217;s been investing in consumer and prosumer for years, thinks we&#8217;re about to see a shift in how consumers spend time online, with AI powering \u201cconcierge-like\u201d services. The question is, will legacy consumer products like WebMD and [&#8230;]"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/07/anthropic-reportedly-raising-10b-at-350b-valuation/",
+        "title": "Anthropic reportedly raising $10B at $350B valuation",
+        "link": "https://techcrunch.com/2026/01/07/anthropic-reportedly-raising-10b-at-350b-valuation/",
+        "published": "Wed, 07 Jan 2026 18:36:53 +0000",
+        "source": "TechCrunch",
+        "summary": "Anthropic is reportedly in talks to raise $10 billion at a $350 billion valuation, marking its third mega-round in a year."
+    },
+    {
+        "id": "https://www.theverge.com/news/857864/samsung-ballie-robot-shelved-ces-2026",
+        "title": "Samsung&#8217;s Ballie robot is probably never coming out",
+        "link": "https://www.theverge.com/news/857864/samsung-ballie-robot-shelved-ces-2026",
+        "published": "2026-01-07T14:00:53-05:00",
+        "source": "The Verge",
+        "summary": "Samsung's spherical Ballie robot may be rolling off into the sunset, less than a year after its retail launch was announced. The smart home robot has made an appearance at CES almost every year since it was first announced in 2020, but was notably absent at CES 2026. Unfortunately, its disappearance may be because Ballie [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/ai-artificial-intelligence/857640/openai-launches-chatgpt-health-connect-medical-records",
+        "title": "OpenAI launches ChatGPT Health, encouraging users to connect their medical records",
+        "link": "https://www.theverge.com/ai-artificial-intelligence/857640/openai-launches-chatgpt-health-connect-medical-records",
+        "published": "2026-01-07T14:00:00-05:00",
+        "source": "The Verge",
+        "summary": "OpenAI has been dropping hints this week about AI's role as a \"healthcare ally\" - and today, the company is announcing a product to go along with that idea: ChatGPT Health. ChatGPT Health is a sandboxed tab within ChatGPT that's designed for users to ask their health-related questions in a more secure and personalized environment, [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/857811/amazon-redesigned-dash-cart-whole-foods-fresh-launch",
+        "title": "Amazon&#8217;s smart shopping cart for Whole Foods gets bigger, lighter, and adds tap-to-pay",
+        "link": "https://www.theverge.com/news/857811/amazon-redesigned-dash-cart-whole-foods-fresh-launch",
+        "published": "2026-01-07T13:36:05-05:00",
+        "source": "The Verge",
+        "summary": "Amazon is launching a revamped version of its smart shopping cart, which it plans to bring to dozens of Whole Foods locations by the end of this year, according to an announcement on Wednesday. The new Dash Cart features a \"more responsive\" item scanner that's now located next to the built-in display, along with a [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/857798/fujifilm-instax-mini-evo-cinema-printer-instant-camera-video-effects",
+        "title": "Fujifilm\u2019s new instant camera captures video with vintage effects",
+        "link": "https://www.theverge.com/tech/857798/fujifilm-instax-mini-evo-cinema-printer-instant-camera-video-effects",
+        "published": "2026-01-07T13:29:15-05:00",
+        "source": "The Verge",
+        "summary": "Fujifilm is expanding its hybrid instant camera line with the new Instax Mini Evo Cinema that adds the ability to capture video clips up to 15 seconds long. The Mini Evo Cinema also features a unique design inspired by the vintage Fujica Single-8 8mm film camera that Fujifilm introduced in 1965. It will be released [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/857061/amazon-4k-uhd-blu-ray-promo-genki-moonbase-charger-deal-sale",
+        "title": "Some of our favorite 4K UHD Blu-rays are three for $33 at Amazon right now",
+        "link": "https://www.theverge.com/gadgets/857061/amazon-4k-uhd-blu-ray-promo-genki-moonbase-charger-deal-sale",
+        "published": "2026-01-07T13:26:48-05:00",
+        "source": "The Verge",
+        "summary": "The holidays \u2014 and the copious amounts of binge-watching that come with them \u2014 are very much behind us at this point, but that doesn\u2019t mean there won\u2019t be time to catch up on the movies from last year (and beyond) you might have missed. Thankfully, Amazon has brought back one of the better promos [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/ai-models-keep-learning-after-training-research/",
+        "title": "AI Models Are Starting to Learn by Asking Themselves Questions",
+        "link": "https://www.wired.com/story/ai-models-keep-learning-after-training-research/",
+        "published": "Wed, 07 Jan 2026 19:00:00 +0000",
+        "source": "WIRED",
+        "summary": "An AI model that learns without human input\u2014by posing interesting queries for itself\u2014might point the way to superintelligence."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/pc/asus-and-xreal-teamed-up-at-ces-to-make-gaming-smartglasses-with-two-important-upgrades-190500897.html?src=rss",
+        "title": "ASUS and XREAL teamed up at CES to make gaming smartglasses with two important upgrades",
+        "link": "https://www.engadget.com/gaming/pc/asus-and-xreal-teamed-up-at-ces-to-make-gaming-smartglasses-with-two-important-upgrades-190500897.html?src=rss",
+        "published": "Wed, 07 Jan 2026 19:05:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p></p><p>The latest generation of smartglasses can create huge virtual screens without the need to lug around giant monitors are a real boon to frequent travelers. However, their specs aren\u2019t often tailored to the needs of gamers, so at CES 2026, ASUS and XREAL partnered to make a pair with two very important features you don\u2019t normally get from rivals.&nbsp;</p><p>The new ROG XREAL R1 AR glasses are based on the existing <a class=\"link\" href=\"https://www.engadget.com/ar-vr/xreals-one-pro-intri"
+    },
+    {
+        "id": "https://www.engadget.com/transportation/brunswicks-latest-boats-at-ces-2026-feature-edge-ai-self-docking-capabilities-and-solar-power-185500213.html?src=rss",
+        "title": "Brunswick's latest boats at CES 2026 feature edge AI, self-docking capabilities and solar power",
+        "link": "https://www.engadget.com/transportation/brunswicks-latest-boats-at-ces-2026-feature-edge-ai-self-docking-capabilities-and-solar-power-185500213.html?src=rss",
+        "published": "Wed, 07 Jan 2026 18:55:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If you've never docked <a class=\"link\" href=\"https://www.engadget.com/bmws-all-electric-luxury-boat-comes-with-a-custom-hans-zimmer-soundtrack-191052673.html\" target=\"_blank\">a boat</a> before, consider yourself lucky. There are plenty of popular TikTok channels devoted to shaming those who bring their craft back home clumsily or berth them with something less than finesse. Tricky crosswinds, unpredictable surf and even the jeers of passersby can make it a stressful experience at the best of "
+    },
+    {
+        "id": "https://www.engadget.com/transportation/niko-is-a-robotic-lift-for-people-with-limited-mobility-that-doesnt-require-a-caregivers-help-184500703.html?src=rss",
+        "title": "Niko is a robotic lift for people with limited mobility that doesn't require a caregiver's help",
+        "link": "https://www.engadget.com/transportation/niko-is-a-robotic-lift-for-people-with-limited-mobility-that-doesnt-require-a-caregivers-help-184500703.html?src=rss",
+        "published": "Wed, 07 Jan 2026 18:45:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>A startup called ReviMo has developed a robotic system that provides a way for people with limited mobility to lift and transfer themselves \u2014 like from a bed to a wheelchair, or to the toilet \u2014 without the assistance of a caregiver. ReviMo's Niko has two sets of arms: one that forms a &quot;scooping seat&quot; that slides underneath the person to lift them up, and the other encircling their torso and providing a backrest. It can be operated both by remote and using the controls on its dashboa"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/ubisoft-is-shutting-down-a-studio-16-days-after-it-unionized-183000983.html?src=rss",
+        "title": "Ubisoft is shutting down a studio 16 days after it unionized",
+        "link": "https://www.engadget.com/gaming/ubisoft-is-shutting-down-a-studio-16-days-after-it-unionized-183000983.html?src=rss",
+        "published": "Wed, 07 Jan 2026 18:30:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Ubisoft is closing a Canadian studio just over two weeks after it unionized. In a dizzying claim, the company <a class=\"link\" href=\"https://www.gamesindustry.biz/ubisoft-shuttering-freshly-unionised-halifax-studio-71-jobs-affected\" target=\"_blank\">told</a> <a class=\"link\" target=\"_blank\"><em>GamesIndustry.biz</em></a> that the closure of Ubisoft Halifax was part of &quot;company-wide actions to streamline operations&quot; and unrelated to the unionization.</p><p>On December 22, Ubisoft Halifa"
+    },
+    {
+        "id": "https://www.engadget.com/home/smart-home/lgs-cloid-robot-can-fold-laundry-and-serve-food-very-slowly-181902306.html?src=rss",
+        "title": "LG's CLOiD robot can fold laundry and serve food\u2026 very slowly",
+        "link": "https://www.engadget.com/home/smart-home/lgs-cloid-robot-can-fold-laundry-and-serve-food-very-slowly-181902306.html?src=rss",
+        "published": "Wed, 07 Jan 2026 18:19:02 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>When LG announced that it would demo <a class=\"link\" href=\"https://www.engadget.com/home/smart-home/lg-will-show-off-a-humanoid-robot-for-household-chores-at-ces-2026-145411218.html\" target=\"_blank\">a laundry-folding</a>, chore-doing robot at CES 2026, I was immediately intrigued. For years, I've wandered the Las Vegas Convention Center halls and wondered when someone might create a robot that can tackle the mundane but useful tasks I despise like folding laundry. With CLOiD (pronounced like "
+    },
+    {
+        "id": "https://socket.dev/blog/npm-to-implement-staged-publishing",
+        "title": "NPM to implement staged publishing after turbulent shift off classic tokens",
+        "link": "https://socket.dev/blog/npm-to-implement-staged-publishing",
+        "published": "Wed, 07 Jan 2026 18:31:19 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46530448\">Comments</a>"
     }
 ]
